update some feature